cluster/talos/apps/etherpad/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: etherpad
  labels:
    goldilocks.fairwinds.com/enabled: "true"
